Adjust parameters for newer JDK9 builds, -addmods is now --add-modules, add some debug-output for reflection
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1772557 13f79535-47bb-0310-9956-ffa450edef68